# be-analytic-ai

./: .env  .env.example  Dockerfile  README.md  docker-compose.yaml  launch.sh  main.py  pyproject.toml  sql_app.db
app/: config.py  database.py  depends.py  exseptions.py  utils.py
app/filters/: anime_query_filter.py
app/models/: models.py  user_model.py
app/repositories/: anime_chapter_repository.py  anime_repository.py  category_repository.py  comment_repository.py  company_repository.py  date_created_repository.py  genre_anime_repository.py  genre_of_anime_repository.py  genre_repository.py  producer_repository.py  rating_repository.py  role_repository.py  studio_repository.py  train_data_repository.py  user_repository.py
app/routers/: router_spech_to_text.py
app/schemas/: anime_schema.py  category_schema.py  comment_schema.py  company_schema.py  date_announce_schema.py  genre_schema.py  producer_schema.py  rating_schema.py  role_schema.py  studio_schema.py  token_schema.py  train_data_schema.py  user_schema.py
app/utils/: email_utils.py  jwt_utils.py  media_utils.py  security_utils.py  utils.py
migrations/: env.py
migrations/versions/: 21eecd5b62b5_created_deals_leads_table.py  2a3b2f1a53c3_categories_company_id_was_foreign_key.py  2d7dc8a78de4_created_products_table.py  2de8b9d30c57_company_some_fields_was_optional.py  30cb65bba67a_companies_altered_table.py  45422b3962bd_branches_removed_postal_code.py  5f36a7a93a0e_employee_changed_roles_management.py  7d0f7b42ff08_created_tables.py  (+5 more)
scripts/: launch.sh
src/: config.py  main.py
(+365 files in other folders)
