[tool.poetry]
name = "tolqyn"
version = "0.1.0"
description = ""
authors = ["Dinmukhammed <arystambekdimash005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
alembic = "^1.12.1"
sqlalchemy = "^2.0.23"
websockets = "^12.0"
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
bson = "^0.5.10"
pillow = "^10.1.0"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
asyncpg = "^0.29.0"
fastapi-filter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
